--- a/hamid suhag portfolio/index.html
+++ b/hamid suhag portfolio/index.html
@@ -51,7 +51,15 @@
                                     <div class="header-contant">
                                         <h1 class="header-title">WE DESIGN <span class="logo-color">THINGS</span></h1>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non earum illo, <br> dolorem, minima autem dolorum? Temporibus culpa velit eligendi itaque.</p>
-                                    </div>
+                                        <p>My new code for frist website</p>
+                                        <p>My new code for frist website</p>
+                                        <p>My new code for frist website</p>
+                                        <p>My new code for frist website</p>
+                                        <p>My new code for frist website</p>
+                                        <p>My new code for frist website</p>
+                                        <p>My new code for frist website</p>
+
+                                </div>
                                     <div class="header-button">
                                         <button class=" btn btn-1 wow slideInLeft">HIRE US</button>
                                         <button class="btn btn-2 wow slideInRight">OUR WORK</button>
