--- a/hamid suhag portfolio/index.html
+++ b/hamid suhag portfolio/index.html
@@ -37,7 +37,13 @@
                                 <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#">Pages</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#">Posts</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">services</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">Web design</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">SEO</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">Degital markeing</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">wordpress</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">Ecommerce</a></li>
+
                             </ul>
 
                         </div>
