--- a/hamid suhag portfolio/index.html
+++ b/hamid suhag portfolio/index.html
@@ -42,7 +42,7 @@
                                 <li class="nav-item"><a class="nav-link" href="#">SEO</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#">Degital markeing</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#">wordpress</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#">Ecommerce</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">Ecommercegit</a></li>
 
                             </ul>
 
